ie menu jump fixed

--- a/assets/default.scss
+++ b/assets/default.scss
@@ -80,7 +80,7 @@ body {
   min-width: 320px;
   background: #fff;
   position: relative;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 *:focus, *:active {
